--- a/platforms/android/app/src/main/assets/www/pages/formLIC2.html
+++ b/platforms/android/app/src/main/assets/www/pages/formLIC2.html
@@ -14,7 +14,7 @@
              <div style="text-align: center;"><img src="img/logo-FWM.png" style="margin-top: 5px;" height="41.38px" alt="Logo Field"></div>
              <div class="navbar-inner sliding" style="height: 52px;">
                  <div class="left">
-                    <a href="#" onclick="regresar_Aliatonic(1)">
+                    <a href="#" onclick="">
                         <span class="nav-text-regresar" id="nav-text-regresar-function">Regresar</span>
                     </a>
                  </div>
