Recorrido 2 cierreLIC y yamevoyLIC

--- a/platforms/android/app/src/main/assets/www/pages/cierreLICL.html
+++ b/platforms/android/app/src/main/assets/www/pages/cierreLICL.html
@@ -71,7 +71,7 @@ p {
                                     <tbody id="table-general-conten">
                                         <tr>
                                             <th style="color: #505759;font-size: 11px;font-size: 14px;font-family: 'ITC Avant Garde Gothic', sans-serif;">Nombre del Cliente:</th>
-                                            <td><span id="nombre_comercial" style="color: #063E7F;font-size: 11px;font-size: 14px;font-family: 'ITC Avant Garde Gothic', sans-serif;">Trampas</span></td>
+                                            <td><span id="nombre_comercial" style="color: #063E7F;font-size: 11px;font-size: 14px;font-family: 'ITC Avant Garde Gothic', sans-serif;">Cable</span></td>
                                         </tr>
                                         <tr>
                                             <th style="color: #505759;font-size: 11px;font-size: 14px;font-family: 'ITC Avant Garde Gothic', sans-serif;">Telefono:</th>
