--- a/platforms/android/app/src/main/assets/www/pages/formLIC1.html
+++ b/platforms/android/app/src/main/assets/www/pages/formLIC1.html
@@ -30,8 +30,8 @@
                     <span class="span FWM-span-form">Tipo de Servicio:</span>
                     <select class="FWM-input obligatorio" name="Tipo de inmueble" id="tipo_inmueble">
                         <option value="0" selected>Selecciona una opción</option>
-                        <option value="Litografía">Servicio 1</option>
-                        <option value="Natural">Servicio 2</option>
+                        <option value="Ser1">Servicio 1</option>
+                        <option value="Ser2">Servicio 2</option>
                     </select>
                    
                     <span class="span FWM-span-form">No. de Trampas:</span>
