--- a/platforms/android/app/src/main/assets/www/pages/formLIC3.html
+++ b/platforms/android/app/src/main/assets/www/pages/formLIC3.html
@@ -35,11 +35,11 @@
                     <span class="span FWM-span-form">Tipo de Trampa</span>
                         <select class="FWM-input obligatorio" name="Tipo de inmueble" id="tipo_tarima">
                             <option value="0" selected>Selecciona una opción</option>
-                            <option value="Litografía">Trampa 1</option>
-                            <option value="Natural">Trampa 2</option>
+                            <option value="Trampa1">Trampa 1</option>
+                            <option value="Trampa2">Trampa 2</option>
                         </select>
-                        <span class="span FWM-span-form">No. pacas realizadas</span>
-                        <input type='number' id="no_pacas" name="Ubicación" class="FWM-input obligatorio" style="font-family: 'ITC Avant Garde Gothic', sans-serif;" onchange="inputLleno(this.id,this.value)"/>
+                        <span class="span FWM-span-form">No. trampas limpias</span>
+                        <input type='number' id="no_Trampas" name="Ubicación" class="FWM-input obligatorio" style="font-family: 'ITC Avant Garde Gothic', sans-serif;" onchange="inputLleno(this.id,this.value)"/>
 
                     <span class="span FWM-span-form">Foto:</span>
                         <div class="FWM-photo-container">
