--- a/platforms/android/app/src/main/assets/www/pages/recorridoLIC1.html
+++ b/platforms/android/app/src/main/assets/www/pages/recorridoLIC1.html
@@ -20,29 +20,25 @@
                     </div>
                 </div>
                     <div class="buttons-container" style="display: flex;">
-                        <a href="/formAliatonic1/" class="fwm-button-recorrido">
+                        <a href="/formLIC1/" class="fwm-button-recorrido">
                             <img src="" width="90px" height="90px" id="img1"/>
                             <span class="fwm-text-recorrido">Validación antes del servicio</span>
                         </a>
-                        <a href="/formAliatonic2/" class="fwm-button-recorrido">
+                        <a href="/formLIC2/" class="fwm-button-recorrido">
                             <img src="" width="90px" height="90px" id="img2"/>
                             <span class="fwm-text-recorrido">Check point</span>
                         </a>
                     </div>
                     <br><br>
                     <div class="buttons-container" style="display: flex;">
-                        <a href="/formAliatonic4/" class="fwm-button-recorrido">
+                        <a href="/formLIC3/" class="fwm-button-recorrido">
                             <img src="" width="90px" height="90px" id="img3"/>
                             <span class="fwm-text-recorrido">Check Out</span>
-                        </a>
-                        <a href="/formAliatonic3/" class="fwm-button-recorrido">
-                            <img src="" width="90px" height="90px" id="img4"/>
-                            <span class="fwm-text-recorrido">Incidencias</span>
                         </a>
                     </div>
                     <br><br>
                     <div class="buttons-container" style="display: flex;">
-                        <a href="/cierreAliatonic/" class="fwm-button-recorrido">
+                        <a href="/cierreLIC/" class="fwm-button-recorrido">
                             <img src="img/iconsMenu/estrellas.svg" width="90px" height="90px" id="img5"/>
                             <span class="fwm-text-recorrido">Cierre</span>
                         </a>
