Reestructura menuLIC y routes

--- a/platforms/android/app/src/main/assets/www/pages/recorridoLIC1.html
+++ b/platforms/android/app/src/main/assets/www/pages/recorridoLIC1.html
@@ -22,18 +22,18 @@
                     <div class="buttons-container" style="display: flex;">
                         <a href="/formLIC1/" class="fwm-button-recorrido">
                             <img src="" width="90px" height="90px" id="img1"/>
-                            <span class="fwm-text-recorrido">Validación antes del servicio</span>
+                            <span class="fwm-text-recorrido">Servicios Inicio</span>
                         </a>
                         <a href="/formLIC2/" class="fwm-button-recorrido">
                             <img src="" width="90px" height="90px" id="img2"/>
-                            <span class="fwm-text-recorrido">Check point</span>
+                            <span class="fwm-text-recorrido">Durante</span>
                         </a>
                     </div>
                     <br><br>
                     <div class="buttons-container" style="display: flex;">
                         <a href="/formLIC3/" class="fwm-button-recorrido">
                             <img src="" width="90px" height="90px" id="img3"/>
-                            <span class="fwm-text-recorrido">Check Out</span>
+                            <span class="fwm-text-recorrido">Final</span>
                         </a>
                     </div>
                     <br><br>
