--- a/platforms/android/app/src/main/assets/www/pages/yallegueLIC.html
+++ b/platforms/android/app/src/main/assets/www/pages/yallegueLIC.html
@@ -60,7 +60,7 @@
                 
                 <form class="list" id="demo-form">
                     <input type="hidden" id="imagenC" name="imagenC" onchange="obtenerTime();"/>
-                    <span class="text-yallegue">Confirmación de Inicio de Servicio LIC(Levantamiento)</span><br/>
+                    <span class="text-yallegue">Confirmación de Inicio de Servicio LIC</span><br/>
                     <br>
                     <center>
                         <a href="#" onclick="capturePhoto();">
@@ -98,7 +98,7 @@
                                 <li class="item-content item-input cliente-ayuda">
                                     <div class="item-inner">
                                         <div class="item-input-wrap input-yallegue">
-                                            <input type="text" placeholder="Escribe el nombre del Cliente" name="ncliente"  value='Levantamiento' readonly id="cliente-Field" class="autocomplete-dropdown item-title" >
+                                            <input type="text" placeholder="Escribe el nombre del Cliente" name="ncliente"  value='Limpieza de trampas y desasolve' readonly id="cliente-Field" class="autocomplete-dropdown item-title" >
                                         </div>
                                     </div>
                                 </li>
